[package]
name = "oxideav-vp6"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-vp6"
authors = ["Mark Karpeles"]
description = "Pure-Rust On2 VP6 (vp6f) video decoder for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-vp6"
keywords = ["multimedia", "video", "vp6", "codec", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = "0.1"
oxideav-codec = "0.1"
